### CHANGELOG FORMAT:
yyyy-mm-dd Your Name <your@email.com>
	* file ( method in file ) : changes.
###

2019-12-30 Inge Wortel <ingewortel@gmail.com>
    * Added a copy of the fpsmeter package to the right folder in the examples
    folder to fix a problem with the 3D examples not working.
    * .eslintrc.js : added compatibility with jasmine (for the WebStorm editor).
    * .esdoc.json : set up the config so that also an overview of tests is
    listed, and a link to the github repo.
    * spec/LocalConnectivityConstraintSpec.js : Updated doc blocks to link tests
    to the documentation with the @test tag. Minor bug fixed.
    * examples/build-examples/Makefile : set up automatic generation of node
    scripts with short burnin & runtime for rapid automatic testing of all the
    examples.
    * Makefile : split testing procedure (target test-all) into jasmine spec
    tests and separate testing of the examples.


2019-12-29 Inge Wortel <ingewortel@gmail.com>
	* spec/grid/GridSpec.js : tests added for the Grid superclass.
	* app/include-list.txt : Grid superclass added to the build so it can
	be tested more easily.
	* src/grid/Grid.js : errors added when methods are called that should be
	implemented in the subclass but haven't been. Added setter/getter for the
	private pixels array so that an error can be thrown when this is undefined.
	Check for negative/floating point values when grid is Uint16, because this
	gives weird bugs if you try to set such a value on the grid.
	* src/grid/Grid2D/3D.js : save datatype as a grid property so the
	isValidValue method knows which values are valid on a grid instance.
	* spec/LocalConnectivityConstraintSpec.js : Updated tests.
	* src/hamiltonian/LocalConnectivityConstraint.js : Updated docs.

2019-12-20 Inge Wortel <ingewortel@gmail.com>
    * src/hamiltonian/SoftLocalConnectivityConstraint.js : changed code so that
    the neighborhood type used to compute connectivity can be changed through